syntax = "proto3";

package com.smile.spotify.model;

message BootstrapResponse {
  oneof ucsResponse {
    UcsResponseWrapperV0 ucsResponseV0 = 2;
    TrialsFacadeResponseWrapperV1 trialsFacadeResponseV1 = 3;
  }
}

message UcsResponseWrapperV0 {
  oneof result {
    UcsResponseWrapperSuccess success = 1;
    UcsResponseWrapperError error = 2;
  }
}

message UcsResponseWrapperSuccess {
  UcsResponseWrapper customization = 1;
}

message UcsResponseWrapperError {
  int32 errorCode = 1;
  string message = 2;
  string logId = 3;
}

message TrialsFacadeResponseWrapperV1 {
  oneof result {
    TrialsFacadeResponseWrapperSuccess success = 1;
    TrialsFacadeResponseWrapperError error = 2;
  }
}

message TrialsFacadeResponseWrapperSuccess {
  int32 field1 = 1;
}

message TrialsFacadeResponseWrapperError {
  int32 errorCode = 1;
  string message = 2;
  string logId = 3;
}

message UcsResponseWrapper {
  oneof result {
    UcsResponse success = 1;
    Error error = 2;
  }
}

message UcsResponse {
  oneof resolveResult {
    ResolveResponse resolveSuccess = 1;
    Error resolveError = 2;
  }
  oneof accountAttributesResult {
    AccountAttributesResponse accountAttributesSuccess = 3;
    Error accountAttributesError = 4;
  }
  int64 fetchTimeMillis = 5;
}

message ResolveResponse {
  Configuration configuration = 1;
}

message Configuration {
  string configurationAssignmentId = 1;
  int64 fetchTimeMillis = 2;
  repeated AssignedValue assignedValues = 3;
  int64 policySnapshotId = 4;
}

message AssignedValue {
  Identifier propertyId = 1;
  Metadata metadata = 2;
  oneof structuredValue {
    BoolValue boolValue = 3;
    IntValue intValue = 4;
    EnumValue enumValue = 5;
  }
}

message Identifier {
  string scope = 1;
  string name = 2;
}

message Metadata {
  int64 policyId = 1;
  string externalRealm = 2;
  int64 externalRealmId = 3;
}

message BoolValue {
  bool value = 1;
}

message EnumValue {
  string value = 1;
}

message IntValue {
  int32 value = 1;
}

message AccountAttributesResponse {
  map<string, AccountAttribute> accountAttributes = 1;
}

message AccountAttribute {
  oneof value {
    bool boolValue = 2;
    int64 longValue = 3;
    string stringValue = 4;
  }
}

message Error {
  int32 errorCode = 1;
  string errorMessage = 2;
}
